examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/if_nat.st
language core;

fn main(n : Nat) -> Bool {
    return if 0 then false else true
}//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
\n\n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
/n/n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
